<resources>
    <string name="app_name">MyF1</string>
    <string name="txtEmailAdressLogin">Email</string>
    <string name="txtPasswordLogin">Contraseña</string>
    <string name="btnLogin">Iniciar Sesión</string>
    <string name="txtCrearCuenta">Crear Cuenta</string>
    <string name="txtNameRegister">Nombre</string>
    <string name="btnRegister">Registrarse</string>
    <string name="txtPasswordRepeatRegister">Repetir Contraseña</string>
    <string name="txtCancelText">¿Ya tienes una cuenta?</string> <!--TODO: poner al lado un iniciar sesion que sea un intent al login -->
    <string name="txtForgottenPasswd">¿Olvidó su contraseña?</string>
    <string name="txtNameDefault">NAME</string>
    <string name="txtNameProfile">Ingresa el nuevo nombre</string>
    <string name="txtEmailProfile">Ingresa el nuevo email</string>
    <string name="btnSaveChanges">Guardar cambios</string>
    <string name="btnChangePassword">Cambiar contraseña</string>
    <string name="btnLogout">Cerrar sesión</string>
    <!-- Array de conductores -->
    <string-array name="drivers_array">
        <item>Seleccione un conductor:</item>
        <item>Alexander Albon</item>
        <item>Carlos Sainz</item>
        <item>Charles Leclerc</item>
        <item>Daniel Ricciardo</item>
        <item>Esteban Ocon</item>
        <item>Fernando Alonso</item>
        <item>George Russell</item>
        <item>Guanyu Zhou</item>
        <item>Kevin Magnussen</item>
        <item>Lance Stroll</item>
        <item>Lando Norris</item>
        <item>Lewis Hamilton</item>
        <item>Max Verstappen</item>
        <item>Mick Schumacher</item>
        <item>Nicholas Latifi</item>
        <item>Nico Hülkenberg</item>
        <item>Pierre Gasly</item>
        <item>Sebastian Vettel</item>
        <item>Sergio Pérez</item>
        <item>Valtteri Bottas</item>
        <item>Yuki Tsunoda</item>
    </string-array>
    <!-- Array de equipos-->
    <string-array name="teams_array">
        <item>Seleccione una escudería</item>
        <item>Alfa Romero</item>
        <item>AlphaTauri</item>
        <item>Alpine F1 Team</item>
        <item>Aston Martin</item>
        <item>Ferrari</item>
        <item>Haas F1 Team</item>
        <item>McLaren</item>
        <item>Mercedes</item>
        <item>Red Bull</item>
        <item>Williams</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>