<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="372dp"
        android:layout_height="659dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/txtNameRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:ems="10"
            android:hint="@string/txtNameRegister"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/txtEmailAdressRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:ems="10"
            android:hint="@string/txtEmailAdressLogin"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/txtPasswdRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:ems="10"
            android:hint="@string/txtPasswordLogin"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/txtPasswdRepeatRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:ems="10"
            android:hint="@string/txtPasswordRepeatRegister"
            android:inputType="textPassword" />

        <Spinner
            android:id="@+id/spinnerFavDriverRegister"
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/spinnerFavTeamRegister"
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnFinishRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_rectangle"
            android:layout_marginTop="40dp"
            android:text="@string/btnRegister" />
        <TextView
            android:id="@+id/txtCancelRegister"
            style="@style/CenterText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/txtCancelText" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>